--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Revela.io -- Under Construction</title>
 </head>
 <body>
-<p>Revela.io is open for business during renovations!</p>
+<p>We hope you are enjoying this minimalistic Revela.io experience.</p>
 </body>
 </html>
