--- a/source/site/index.html
+++ b/source/site/index.html
@@ -11,16 +11,35 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <div class="revelalogo">Revela</div>
+        <a href="contact.html">Contact Us</a>
+        <a href="">Services</a>
+        <a href="">Products</a>
+        <a href="about.html">About</a>
+        <a href="index.html">Home</a>
+    </div>
     <main>
-        <div>
+        <div class="title">
             <header>Revela.io</header>
-            <span id="construction">We hope you are enjoying this minimalistic experience.</span>
+            <span id="construction">We hope you are enjoying this minimalistic experience...</span>
+        </div>
+        <div class="nextsection">
+            <p>Testing</p>
         </div>
     </main>
+
+    <next>
+
+    </next>
+
+
+
 
     <!-- build:js js/revela.min.js -->
     <script src="js/main.js"></script>
     <!-- endbuild -->
 </body>
+
 
 </html>
