--- a/source/site/index.html
+++ b/source/site/index.html
@@ -25,7 +25,7 @@
             <span id="construction">We hope you are enjoying this minimalistic experience...</span>
         </div>
         <div class="nextsection">
-            <p>Testing</p>
+            <p>Testing...</p>
         </div>
     </main>
 
