--- a/source/site/index.html
+++ b/source/site/index.html
@@ -13,20 +13,67 @@
 <body>
     <div class="navbar">
         <div class="revelalogo">Revela</div>
-        <a href="contact.html">Contact Us</a>
-        <a href="">Services</a>
-        <a href="">Products</a>
-        <a href="about.html">About</a>
-        <a href="index.html">Home</a>
+        <a href="#contact">Contact Us</a>
+        <a href="#services">Services</a>
+        <a href="#products">Products</a>
+        <a href="#about">About</a>
+        <a href="#home">Home</a>
     </div>
+
     <main>
+        <a name="home"></a>
         <div class="title">
-            <header>Revela.io</header>
-            <span id="construction">We hope you are enjoying this minimalistic experience...</span>
+            <header>Revela</header>
+            <span id="construction">Some slogan about what we do...</span>
         </div>
-        <div class="nextsection">
+
+        <a name="about"></a>
+        <div class="about">
+            <div class="left">
+                <p>Testing...</p>
+            </div>
+            <div class="right">
+                <p>Testing...</p>
+            </div>
+        </div>
+
+        <div class="separator"></div>
+
+        <a name="products"></a>
+        <div class="products">
             <p>Testing...</p>
         </div>
+
+        <div class="separator"></div>
+
+        <a name="services"></a>
+        <div class="services">
+            <p>Testing...</p>
+        </div>
+
+        <div class="separator"></div>
+
+        <a name="contact"></a>
+        <div class="contact">
+            <div class="contactleft">
+                <p>CONTACT US:</p>
+                <ul>
+                    <li>Phone: 1-111-111-1111</li>
+                    <li>Email: info@revela.io</li>
+                    <li>-----------------</li>
+                    <li>Place</li>
+                    <li>Address</li>
+                    <li>Here</li>
+                </ul>
+            </div>
+            <div class="contactright">
+                <p>SOCIAL:</p>
+                <ul>
+                    <li>Are we doing social media?</li>
+                </ul>
+            </div>
+        </div>
+
     </main>
 
     <next>
