web template updates

--- a/source/site/index.html
+++ b/source/site/index.html
@@ -14,8 +14,8 @@
     <div class="navbar">
         <div class="revelalogo">Revela</div>
         <a href="#contact">Contact Us</a>
+        <a href="#investors">Investors</a>
         <a href="#services">Services</a>
-        <a href="#products">Products</a>
         <a href="#about">About</a>
         <a href="#home">Home</a>
     </div>
@@ -23,32 +23,53 @@
     <main>
         <a name="home"></a>
         <div class="title">
-            <header>Revela</header>
-            <span id="construction">Some slogan about what we do...</span>
+            <header>Revela Systems</header>
+            <span id="construction">Providing insight to your data</span>
         </div>
 
         <a name="about"></a>
         <div class="about">
-            <div class="left">
-                <p>Testing...</p>
+            <div class="aboutleft">
+                <h2>About Us</h2>
+                <p>Paragraph about Revela Systems...</p>
             </div>
-            <div class="right">
-                <p>Testing...</p>
+            <div class="aboutright">
+                <p>photos of statistical tests?</p>
             </div>
         </div>
+        <div class="aboutbottom">
+            <h2>The Team</h2>
 
-        <div class="separator"></div>
-
-        <a name="products"></a>
-        <div class="products">
-            <p>Testing...</p>
+            <div class="torenimg"></div>
+            <div class="zevimg"></div>
+            <div class="autumnimg"></div>
+            
         </div>
 
         <div class="separator"></div>
 
         <a name="services"></a>
         <div class="services">
-            <p>Testing...</p>
+            <h2>Services</h2>
+            <p>Revela systems will work with you to answer questions?</p>
+            <ul>
+                <li>Data Cleaning</li>
+            </ul>
+        </div>
+
+        <div class="separator"></div>
+
+        <!-- <a name="products"></a>
+        <div class="products">
+            <p>Products to come</p>
+        </div> -->
+
+        <!-- <div class="separator"></div> -->
+
+        <a name="investors"></a>
+        <div class="investors">
+            <h2>Investors</h2>
+            <p>Photos of logos, what to do for Amyn?</p>
         </div>
 
         <div class="separator"></div>
@@ -56,7 +77,7 @@
         <a name="contact"></a>
         <div class="contact">
             <div class="contactleft">
-                <p>CONTACT US:</p>
+                <p>Contact Us:</p>
                 <ul>
                     <li>Phone: 1-111-111-1111</li>
                     <li>Email: info@revela.io</li>
@@ -67,12 +88,21 @@
                 </ul>
             </div>
             <div class="contactright">
-                <p>SOCIAL:</p>
+                <p>Other:</p>
                 <ul>
-                    <li>Are we doing social media?</li>
+                    <li>Not sure what's here</li>
                 </ul>
             </div>
         </div>
+
+<!--         <div class="testcolors">
+            <p>test colors:</p>
+            <div class="t1"></div>
+            <div class="t2"></div>
+            <div class="t3"></div>
+            <div class="t4"></div>
+            <div class="t5"></div>
+        </div> -->
 
     </main>
 
