--- a/source/site/index.html
+++ b/source/site/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="navbar">
+        <div class="logoimg"></div>
         <div class="revelalogo">Revela</div>
         <a href="#contact">Contact Us</a>
         <a href="#investors">Investors</a>
@@ -23,41 +24,49 @@
     <main>
         <a name="home"></a>
         <div class="title">
-            <header>Revela Systems</header>
-            <span id="construction">Providing insight to your data</span>
+            <div class="businessphoto">
+                <header>Revela Systems</header>
+                <div class="description">Providing insight to your data</div>
+            </div>
         </div>
 
         <a name="about"></a>
         <div class="about">
             <div class="aboutleft">
                 <h2>About Us</h2>
-                <p>Paragraph about Revela Systems...</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan auctor dolor at aliquam. Nulla vel faucibus elit, vel tincidunt quam. Aenean lacus magna, mattis at pharetra non, sodales eu mi. Integer sed interdum nibh. Suspendisse nec velit ac nulla auctor dapibus. Sed quis purus interdum, pellentesque massa sit amet, placerat ante. Quisque non felis sollicitudin, interdum ligula et, vestibulum felis. Proin a augue et magna semper fermentum et et ex. Sed lorem nisi, maximus in orci in, consectetur vehicula dui. Nunc dapibus vestibulum interdum. Donec elementum tortor eget augue ultrices, id efficitur ligula ornare.</p>
             </div>
             <div class="aboutright">
-                <p>photos of statistical tests?</p>
+                <p>Put something here. Text? Images?</p>
             </div>
         </div>
-        <div class="aboutbottom">
+        <div class="team">
             <h2>The Team</h2>
 
             <div class="torenimg"></div>
             <div class="zevimg"></div>
             <div class="autumnimg"></div>
+            <div class="toren">
+                <span style= "font-variant:small-caps">Toren Huntley</span><br>
+                <span style="font-variant:small-caps; padding-top:0px">Founder</span>
+            </div>
+            <div class="zev">
+                <span style= "font-variant:small-caps">Zev Isert</span><br>
+                <span style="font-variant:small-caps; padding-top:0px">Founder</span>
+            </div>
+            <div class="autumn">
+                <span style= "font-variant:small-caps">Autumn Umanetz</span><br>
+                <span style="font-variant:small-caps; padding-top:0px">Founder</span>
+            </div>
             
         </div>
-
-        <div class="separator"></div>
 
         <a name="services"></a>
         <div class="services">
             <h2>Services</h2>
             <p>Revela systems will work with you to answer questions?</p>
-            <ul>
-                <li>Data Cleaning</li>
-            </ul>
+                <p>Data Cleaning</p>
         </div>
-
-        <div class="separator"></div>
 
         <!-- <a name="products"></a>
         <div class="products">
@@ -69,10 +78,12 @@
         <a name="investors"></a>
         <div class="investors">
             <h2>Investors</h2>
-            <p>Photos of logos, what to do for Amyn?</p>
+            <div class="alacrity">
+                <img src="/images/alacrity.png" alt="Alacrity Canada" style="width:150px;height:40px;">
+            </div>
+            <div class="amin"><p>Amyn Rajan</p></div>
+            <div class="owen"><p>Owen Matthews</p></div>
         </div>
-
-        <div class="separator"></div>
 
         <a name="contact"></a>
         <div class="contact">
@@ -81,10 +92,6 @@
                 <ul>
                     <li>Phone: 1-111-111-1111</li>
                     <li>Email: info@revela.io</li>
-                    <li>-----------------</li>
-                    <li>Place</li>
-                    <li>Address</li>
-                    <li>Here</li>
                 </ul>
             </div>
             <div class="contactright">
@@ -94,16 +101,7 @@
                 </ul>
             </div>
         </div>
-
-<!--         <div class="testcolors">
-            <p>test colors:</p>
-            <div class="t1"></div>
-            <div class="t2"></div>
-            <div class="t3"></div>
-            <div class="t4"></div>
-            <div class="t5"></div>
-        </div> -->
-
+        <div class="copyright">Copyright 2019 Revela Systems Inc &copy;</div>
     </main>
 
     <next>
